Minor copy change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="scissors" class="box scissors" onclick="select('scissors')"><i class="far fa-hand-scissors"></i></div>
   </div>
   <!-- Results -->
-  <p id="result" class="result hidden">Feeling lucky? 🍀</p>
+  <p id="result" class="result hidden">Feeling lucky?</p>
 
   <!-- JavaScript -->
   <script src="script.js"></script>
