Minor copy change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <!-- Results -->
   <div class="result-container">
-    <p id="result" class="result hidden">Feeling lucky? 🍀</p>
+    <p id="result" class="result hidden">Feeling lucky?</p>
   </div>
 
 
